src/shared/ui/Breadcrumbs/styles.scss
@use '@/shared/scss/breakpoint' as breakpoint;
.Breadcrumbs {
	&__list {
		display: flex;
		align-items: center;
		gap: 20px;
		overflow-x: scroll;
	}

	&__item {
		position: relative;
		padding: 12px 28px;
		border: 1px solid var(--neutral-light);
		border-radius: 32px;
		@include breakpoint.mobile {
			padding: 8px 16px;
		}
	}
	&__separator {
		position: absolute;
		right: -20px;
		top: 50%;
		transform: translateY(-50%);
		color: var(--neutral-medium);
		display: flex;
		align-items: center;
	}
	&__container {
		padding: 12px 0;
	}

	&__link {
		color: var(--text-secondary);
		text-decoration: none;
		transition: color 0.2s;
		font-family: var(--font-family);
		font-weight: 400;
		font-size: 14px;
		color: var(--neutral-darkest);
		text-wrap: nowrap;
		&:hover {
			color: var(--text-primary);
			text-decoration: underline;
		}
		@include breakpoint.mobile {
			font-size: 12px;
			line-height: 167%;
		}
	}
	&__text {
		color: var(--text-secondary);
		font-family: var(--font-family);
		font-weight: 400;
		font-size: 14px;
		color: var(--neutral-darkest);
		text-wrap: nowrap;
		@include breakpoint.mobile {
			font-size: 12px;
			line-height: 167%;
		}
	}
}

